🏔️ Adventure Travel Planner - Complete redesign

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ logs
 # temp files
 temp/
 tmp/
+
+# uploads (keep directory structure but ignore uploaded files)
+/public/uploads/*
+!/public/uploads/.gitkeep
